--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -12,8 +12,18 @@ body {
 	background-color: #FBE580;
 }
 
-.img-responsive {
+
+/*=================================*/
+/*				HEADER
+/*=================================*/
+.img_menu {
 	max-width : 15%;
 	height: auto;
 	display: block;
+}
+.img_section {
+	max-width : 100%;
+	height: auto;
+	display: block;
+	padding: 1rem;
 }
