--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -11,21 +11,79 @@ Tags: custom-site-layout
 /*body {
 	background-color: #FBE580;
 }*/
+/*=================================
+/* 			HEADER
+/*=================================*/
+.img_menu {
+	max-width: 15%;
+}
 
-.address {
-	color: darkgrey;
-	font-size: 14px;
-	text-align: center;
-	border: solid;
-	border-right: 1px solid #cccccc;
-    border-left: 1px solid #cccccc;
-}
-.footer{
-	background-color: blue;
-	position:fixed;
-    bottom:0;
-}
+
 ul li {
 	list-style: none;
 	display: inline;
 }
+
+
+
+/*
+Theme Name: intranet
+Description: theme for intranet RAGT 
+Author: Vanessa Chaillou Delouvrier
+Version: 1.0
+Text Domain: intranet
+
+*/
+
+body {
+	background-image: url('img/background/summer/img_0.jpg');
+	/*background-repeat: no-repeat;*/
+	background-size: cover; 
+}
+
+
+
+/*=================================
+/*               HEADER
+/*=================================*/
+ .img_menu {
+	max-width : 15%;
+	height: auto;
+	display: block;
+}
+.img_section {
+	max-width : 100%;
+	height: auto;
+	display: block;
+	padding: 1rem;
+	max-width: 15%;
+ }
+
+ ul li {
+	list-style: none;
+	display: inline;
+}
+
+
+
+
+
+
+/*==================================*/
+/*			FOOTER
+/*==================================*/
+.address {
+    color: darkgrey;
+    font-size: 14px;
+    text-align: center;
+    border: solid;
+    border-right: 1px solid #cccccc;
+    border-left: 1px solid #cccccc;
+}
+.footer{
+    background-color: blue;
+    position:fixed;
+    bottom:0;
+ }
+
+
