icones dans menu

--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -16,7 +16,7 @@ Tags: custom-site-layout
 /*================================= */
 
  .img_menu {
-	max-width : 15%;
+	max-width : 30%;
 	height: auto;
 	display: block;
 }
@@ -28,9 +28,10 @@ Tags: custom-site-layout
 	padding: 1rem;
  }
 
- ul li {
+.navbar_menu .nav_menu {
 	list-style: none;
 	display: inline;
+	
 }
 
 /*==================================*/
