--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -20,8 +20,7 @@ Tags: custom-site-layout
 
 .img_menu {
     max-width: 15%;
-
-/*================================= */
+}
 .img_section {
     max-width: 100%;
     height: auto;
@@ -59,15 +58,6 @@ ul li {
 }
 
 
-
-/*==================================*/
-/*			FOOTER
-/*==================================*/
-
-.address {
-    /*color: darkgrey;*/
-    font-size: 16px;
-    color: #656565;
 /*################# ilham ###############*/
 
 
