correct class ul header css

--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -18,20 +18,18 @@ Tags: custom-site-layout
 /* 			HEADER					*/
 
 
-.img_menu {
+/*.img_menu {
     max-width: 15%;
-}
+}*/
 .img_section {
     max-width: 100%;
     height: auto;
     display: block;
     padding: 1rem;
-
 }
 
 
-a:hover,
-a:visited,
+ul#menu-menu-principal a:link, a:hover, a:visited, 
 a:active {
     color: #fff;
     text-decoration: none;
@@ -52,10 +50,7 @@ a:active {
 
 }
 
-ul li {
-    list-style: none;
-    display: inline;
-}
+
 
 
 /*################# ilham ###############*/
