--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -61,19 +61,25 @@ ul li {
 }
 
 
+                    /*==========sidebar================*/
 
-/*==================================*/
-/*			FOOTER
-/*==================================*/
+#sidebar {
+    width: 220px;
+    float: right;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
 
-.address {
-    /*color: darkgrey;*/
-    font-size: 16px;
-    color: #656565;
-/*################# ilham ###############*/
+#contenu {
+    width: auto;
+    float: left;
+    margin-bottom: 10px;
+}
+
+                    /*===========fin sidbar==================*/
 
 
-/********    FOOTER    **********/
+                    /*============FOOTER=================*/
 
 .address {
     color: darkgrey;
@@ -96,7 +102,7 @@ footer {
 }
 
 
-p {
+p footer{
     text-align: center;
     color: darkgrey;
 }
@@ -104,10 +110,10 @@ p {
 
 
 
-/*****	fin footer    ******/
+                    /*****	fin footer    ******/
 
 
-/*################# ruud ################*/
+                    /*################# ruud ################*/
 
 .rien {
     /* RIEN */
