--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -93,9 +93,6 @@ footer p {
 
 /*################# ruud ################*/
 
-.rien {
-    /* RIEN */
-}
 
 body {
     background-color: #F5F560;
@@ -106,7 +103,13 @@ main {
     padding-right: 1rem;
 }
 
-/*.entry p{
-    text-align: left;
-    color: #000000;
-}*/
+.img_google {
+    background-color: lightgreen;
+    display: block;
+    margin: auto;
+    max-width : 100%;
+    height: 50%;
+    max-height: 50%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
