folder wp vanessa

--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -46,6 +46,14 @@ Tags: custom-site-layout
     margin-left: 7rem;
 
 }
+/*=======================================*/
+/*            Page projet fabrique
+/*=======================================*/  
+#sample_slider {
+    max-width : 100%;
+    height: auto;
+
+}          
 
 
 /*################# ilham ###############*/
