--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -46,6 +46,11 @@ Tags: custom-site-layout
     margin-left: 7rem;
 
 }
+.menu_header {
+    font-size: 2rem;
+    color:#fff;
+    font-weight: 800;
+}
 
 /*======================================*/
 /*        PAGE ENSEMBLE ON FABRIQUE
@@ -102,8 +107,12 @@ footer {
 
 
 p footer{
-  text-align: center;
+  /*text-align: center;*/
     color: darkgrey;
+}
+
+h6 footer {
+    text-align: center;
 }
 
 
@@ -133,4 +142,13 @@ main {
     max-height: 50%;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+}
+
+h2.screen-reader-text {
+    display: none;
+}
+
+.screen-reader-text {
+    display: none;
+
 }
