--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -33,7 +33,7 @@ Tags: custom-site-layout
     text-decoration: none;
 }
 
-#menu-menu-1 {
+#menu-menu-principal {
     list-style: none;
     text-align: center;
 }
