correction class fabrique css

--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -55,7 +55,7 @@ Tags: custom-site-layout
 /*======================================*/
 /*        PAGE ENSEMBLE ON FABRIQUE
 /*======================================*/
-p .entry {
+.fabrique {
     display: block;
     margin:auto;
     padding:5px;
