--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -61,9 +61,8 @@ Tags: custom-site-layout
     padding:5px;
     font-size:1.5em;
     color:#fff;
-    background-color:#000080;
+    background-color:#0C50A0;
     border:2px solid #000;
-    border-bottom:0;
     width:40%;
     /*height:200px;*/
 }
