menu position fixed

--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -15,7 +15,11 @@ Tags: custom-site-layout
 /*================================= */
 /* 			HEADER					*/
 /*================================= */
-
+header {
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+}
 .img-responsive {
     display: block;
     margin: auto;
