--- a/wp-content/themes/fic/style.css
+++ b/wp-content/themes/fic/style.css
@@ -63,6 +63,21 @@ header {
     color: #fff;
     text-decoration: none;
 }
+/*===================================*/
+/*              GOOGLE MAP
+/*===================================*/
+#my-map {
+    width: 100%;
+    height: 500px;
+    border: #ccc solid 1px;
+    margin: 20px 0;
+    background-color: pink;
+}
+
+/* fixes potential theme css conflict */
+.acf-map img {
+   max-width: inherit;
+}
 
 /*======================================*/
 /*        PAGE ENSEMBLE ON FABRIQUE
@@ -143,7 +158,7 @@ body {
 main {
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 2rem;
+    padding-top: 5rem;
     padding-bottom: 2rem;
 }
 
